# timeless

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  dev.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.sh  requirements.txt  sitemap.xml
.github/workflows/: ci.yaml
converters/basic/: index.html
converters/default_datetime/: index.html
converters/numpy/: index.html
converters/pandas/: index.html
converters/reference/: index.html
datetime/basic/: index.html
datetime/conveniences/: index.html
datetime/operations/: index.html
datetime/parsing/: index.html
datetime/reference/: index.html
docs/: index.md
docs/converters/: basic.md  numpy.md  pandas.md  reference.md
docs/datetime/: basic.md  conveniences.md  operations.md  parsing.md  reference.md
docs/helpers/: basic.md  reference.md
docs/period/: basic.md  reference.md
docs_src/datetime/: datetime_intro_1.py  getting_the_current_time_1.py  replacing_object_values_1.py  replacing_object_values_2.py  timezones_1.py
docs_src/introduction/: sample_usage.py
helpers/basic/: index.html
helpers/reference/: index.html
period/basic/: index.html
period/reference/: index.html
scripts/: clean.bash  docs-live.bash  format.bash  lint.bash  requirements.bash
search/: search_index.json
tests/: conftest.py  test_constructor.py
tests/converters/: test_numpy_converter.py  test_pandas_converter.py
tests/datetime/: test_add.py  test_is.py  test_set.py  test_subtract.py
tests/helpers/: test_helpers.py  teste_helpers.py
tests/period/: test_shift.py
tiez/: __init__.py  datetime.py
timeless/: __init__.py  api.py  converters.py  datetime.py  helpers.py  period.py  utils.py
timeless/converters/: __init__.py  datetime_converter.py  dt_conv.py  np_conv.py  numpy_converter.py  pandas_converter.py  pd_conv.py
